table users as u {
  id integer [pk, increment]
  nickname varchar(100) [not null, unique]
  email varchar(100) [not null, unique]
  password varchar(100) [not null]
  created_at timestamp [not null, default: `now()`]
  role varchar(10) [ default: '']
  profile_description varchar(500) [note: '사용자 프로필 소개']

}

table posts as p {
  id integer [pk, increment]
  users_id integer [ref: > u.id, not null]
  title varchar(300) [not null]
  content varchar(6000) [not null]
  content_slate varchar(6000)
  cate_id integer [ref: > cate.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  status_id integer [ref: > post_statuses.id, default: 1, note:'1: 임시글, 2: 등록글, 3: 미등록']
  visibility_id integer [ref: > visibility_levels.id, default: 1, note:'1: 비밀글, 2: 비공개글']
  Indexes {
  cate_id
  }
}

table temp_posts as tp {
  id integer [pk, increment]
  users_id integer [ref: > u.id, not null]
  post_id integer [not null]
  title varchar(300) [not null]
  content varchar(6000) [not null]
  content_slate varchar(6000)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Ref: temp_posts.post_id - posts.id [delete: cascade]

table categories as cate {
  id integer [pk, increment]
  parent_cate_id integer [ref: > cate.id]
  pos integer
  users_id integer [ref: > u.id]
  category_name varchar(150) [not null]
  depth integer [default: 0]
  post_count integer [default: 0]
  temp_post_count integer [default: 0]
}

table comments as cmt {
  id integer [pk, increment]
  posts_id integer
  users_id integer
  content varchar(1000) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table user_files {
  id integer [pk, increment]
  user_id integer [ref: > users.id, not null]
  original_filename varchar(255) [not null]
  stored_filename varchar(255) [not null]
  file_size bigint [not null]
  mime_type varchar(100)
  created_at timestamp [not null, default: `now()`]
  file_path varchar(1000) [not null]
  is_profile_image boolean [not null, default: false]
  pending_deletion boolean [not null, default: false]
}

Table post_statuses {
  id integer [pk, increment]
  status_name varchar(20) [not null, unique]
}

Table visibility_levels {
  id integer [pk, increment]
  level_name varchar(20) [not null, unique]  // 'private', 'public', 'group_only', 'friends_only', etc.
}

Table post_images {
  id integer [pk, increment]
  post_id integer []
  is_thumbnail boolean [not null, default: false]  // 임시 파일 여부
  original_filename varchar(255) [not null]
  stored_filename varchar(255) [not null]
  file_size bigint [not null]
  mime_type varchar(100)
  created_at timestamp [not null, default: `now()`]
  file_path varchar(1000) [not null]
}

Table post_files {
  id integer [pk, increment]
  post_id integer []
  original_filename varchar(255) [not null]
  stored_filename varchar(255) [not null]
  file_size bigint [not null]
  mime_type varchar(100)
  created_at timestamp [not null, default: `now()`]
  file_path varchar(1000) [not null]
  pending_deletion boolean [not null, default: false]
}


Ref: post_images.post_id > posts.id [delete: set null]
Ref: post_files.post_id > posts.id [delete: set null]

Ref: comments.posts_id > posts.id [delete: set null]
Ref: comments.users_id > users.id [delete: set null]
